--- a/lessons/06_lesson_css_text_fonts/styles.css
+++ b/lessons/06_lesson_css_text_fonts/styles.css
@@ -1,28 +1,47 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
 body {
-    min-height: 100vh;
-}
-
-h1 {
-    border: 2px dashed red;
-    width: 50%;
-    font-size: 3rem;
-    padding: 0.5em;
-}
-
-main {
+    padding: 10%;
     font-size: 2rem;
+    /* color: purple; */
+    /* font-family: sans-serif; */
+    /* font-family: monospace; */
+    /* font-family: 'Courier New', Courier, monospace */
+    /* font-family: Arial, Helvetica, sans-serif; */
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    font-family: 'Times New Roman', Times, serif;
 }
+
+/* input,
+button {
+    font: inherit;
+} */
+
+/* p { */
+/* text-decoration: overline; */
+/* text-decoration: overline; */
+/* text-decoration: line-through; */
+/* text-decoration: none; */
+
+/* text-transform: capitalize; */
+/* text-transform: lowercase; */
+
+/* text-align: left; */
+/* text-align: justify; */
+/* text-align: right; */
+
+/* text-indent: 5em; */
+/* } */
+
+
+/* p { */
+/* line-height: 1.5; */
+/* letter-spacing: 0.2em; */
+/* word-spacing: o.5em; */
+/* } */
 
 
 p {
-    font-size: 2rem;
-    /* font-size: 2em; */
-    width: 40ch;
+    line-height: 1.5;
+    /* font-weight: bolder; */
+    /* font-style: italic; */
+    /* font-style: oblique; */
 }
