--- a/lessons/10_lesson_css_display_property_block_inline/styles.css
+++ b/lessons/10_lesson_css_display_property_block_inline/styles.css
@@ -1,56 +1,55 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
+
 body {
-    margin: 0.5rem;
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
+    font-size: 2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-nav {
-    border: 2px solid #333;
-    border-radius: 2rem;
-    margin: 0 auto 1rem;
-    max-width: 600px;
-    font-size: 3rem;
-    line-height: 7rem;
+/* 
+main {
+    background-color: aqua;
+    width: 50%;
+} */
+
+p {
+    background-color: lightgray;
+    /* margin: 100px 50px; */
 }
 
-h2 {
-    padding: 1rem;
-    background-color: gold;
-    /* top left 2rem top right 2 rem 0 0 */
-    border-radius: 2rem 2rem 0 0;
+.opposite {
+    display: inline-block;
+    background-color: black;
+    color: whitesmoke;
+    margin-top: 100px;
+    height: 200px;
+    padding: 4rem;
 }
+
 
 ul {
     list-style-type: none;
+    padding: 0.5rem;
+    text-align: right;
+    background-color: black;
+    margin: 0;
 }
 
 li {
-    border-top: 1px solid #333;
+    display: inline;
+    margin-inline: 0.5rem;
 }
 
 li a {
-    display: block;
-}
-
-li a,
-li a:visited {
+    color: white;
     text-decoration: none;
-    color: #333;
 }
 
 li a:hover,
 li a:focus {
-    background: #333;
-    color: whitesmoke;
-    cursor: pointer;
-}
-
-li:last-child a {
-    border-radius: 0 0 2rem 2rem;
+    color: red;
 }
